fix: shifting layout

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -9,7 +9,7 @@
   gap: 1rem;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 0;
+  padding: .5rem 0;
 }
 
 .project-navbar button {
@@ -175,13 +175,9 @@
     width: 100%;
     overflow: hidden;
   }
-  /* .project__slider {
-    transition: 0.2s;
-  } */
   .project__img {
     width: 100%;
     margin: auto 0;
-    /* transition: 0.2s; */
   }
   .project__img--mobile {
     margin-left: 7%;
@@ -200,5 +196,11 @@
   }
   .project__navButtons img:hover {
     scale: 1.5;
+  }
+  .project__slider {
+    height: 340px;
+  }
+  .project__img {
+    max-height: 325px;
   }
 }
